fixed DEV-21: center cookie banner on mobile

--- a/src/components/common/cookieConsent/cookieConsent.module.scss
+++ b/src/components/common/cookieConsent/cookieConsent.module.scss
@@ -4,6 +4,6 @@
     @media (max-width:575px) {
         inset: auto auto 10px 50% !important;
         transform: translateX(-50%);
-        width:95% !important;
+        width:calc(100% - 1rem) !important;
     }
 }
